[package]
name = "atcoder-with-creusot"
version = "0.1.0"
edition = "2024"

[dependencies]
creusot-contracts = { git = "https://github.com/creusot-rs/creusot", version = "^0", rev = "6bbb60f" }
proconio = { version = "=0.4.5", features = ["derive"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(creusot)'] }
